# cyberimmune-systems-autonomous-delivery-drone-with-kos-sfedu

./: .gitignore  CMakeLists.txt  README.md  cross-build.sh
autopilot_connector/src/: autopilot_connector_real.cpp
einit/: CMakeLists.txt  init.yaml.in  security.psl.in
einit/real_offline/src/: init.yaml.in  security.psl.in
einit/real_server/src/: security.psl.in
einit/simulator_offline/src/: security.psl.in
einit/simulator_server/src/: security.psl.in
flight_controller/include/: flight_controller_interface.h
flight_controller/src/: flight_controller_interface.cpp  main.cpp
kos/: CMakeLists.txt
kos/flight_controller/src/: main.cpp
mission_sender/: main.py  requirments.txt  utils.py  utilshandler.py
mission_sender/QML/: Main.qml
navigation_system/: CMakeLists.txt
navigation_system/include/: navigation_system.h  sim_sensor_data_message.h
navigation_system/src/: main.cpp  navigation_system_interface.cpp  navigation_system_real.cpp  navigation_system_simulator.cpp
periphery_controller/include/: periphery_controller.h
periphery_controller/src/: periphery_controller_real.cpp
resources/: Test.edl
shared/include/: autopilot_command.h
test/: CMakeLists.txt
test/sdk/: ardupilot.cpp  ardupilot.h  fcc.cpp  sdk_gpio.cpp  sdk_i2c.cpp  sdk_i2c.h  sdk_net.cpp  sdk_uart.cpp
test/src/: main.cpp
